package com.triage.backend.domain.enums;

public enum AccionHistorial {
    REGISTRO,
    CLASIFICACION,
    PRIORIZACION,
    ASIGNACION,
    CAMBIO_ESTADO,
    CIERRE,
    OBSERVACION
}