package com.triage.backend.domain.enums;

public enum CanalOrigen {
    CSU,
    CORREO,
    SAC,
    TELEFONICO,
    PRESENCIAL
}