package com.triage.backend.domain.enums;

public enum ImpactoAcademico {
    BAJO,
    MEDIO,
    ALTO,
    CRITICO
}