package com.triage.backend.domain.enums;

public enum Prioridad {
    BAJA,
    MEDIA,
    ALTA,
    CRITICA
}