package com.triage.backend.domain.enums;

public enum RolNombre {
    ESTUDIANTE,
    ADMINISTRATIVO,
    COORDINADOR
}