package com.triage.backend.domain.enums;

public enum TipoSolicitudNombre {
    HOMOLOGACION,
    SOLICITUD_CUPO,
    CANCELACION_ASIGNATURA,
    REGISTRO_ASIGNATURA,
    CONSULTA_ACADEMICA,
    OTRO
}