package com.triage.backend.security;

public class SecurityConfig {
    
}
