package com.triage.backend.service;

public class HistorialService {
    
}
