package com.triage.backend.service;

public class PriorizacionService {
    
}
