package com.triage.backend.service;

public class ResultadoPriorizacion {
    
}
