package com.triage.backend.service.rules;

public class ReglaPorTipo {
    
}
