package com.triage.backend.web.dto;

public class CambiarEstadoDTO {
    
}
